Devops with Travis CI

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,22 @@
 <!doctype html>
 <html lang="en">
+
+
+
+<script src="https://www.gstatic.com/firebasejs/5.9.3/firebase.js"></script>
+<script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyBhjuHpKTX4nywR5wzB4AtdTuidtO8AWDg",
+    authDomain: "surfinsenegal-6474d.firebaseapp.com",
+    databaseURL: "https://surfinsenegal-6474d.firebaseio.com",
+    projectId: "surfinsenegal-6474d",
+    storageBucket: "surfinsenegal-6474d.appspot.com",
+    messagingSenderId: "364984231699"
+  };
+  firebase.initializeApp(config);
+</script>
+
 <head>
   <meta charset="utf-8">
   <title>SeneSurf</title>
